kubernetes/manifests/istio/avs-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: avs-vs
  namespace: aerospike
spec:
  hosts:
    - "*"
  gateways:
    - avs-gw
  tls:
    - match:
        - port: 5433
          sniHosts:
            - "*"
      route:
        - destination:
            host: avs-gke-aerospike-vector-search.avs.svc.cluster.local
            port:
              number: 5433
